--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Database
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
+DATABASE_URL="postgresql://username:password@localhost:5432/database_name?schema=public"
 
-# JWT
-JWT_SECRET="your-jwt-secret-key-here"
+# JWT Secrets (измените на свои!)
+JWT_SECRET="your-super-secret-jwt-key-change-this"
+ADMIN_JWT_SECRET="your-super-secret-admin-jwt-key-change-this"
 
 # Server
 PORT=3000
@@ -10,3 +11,15 @@ NODE_ENV=development
 
 # Frontend URL for CORS
 FRONTEND_URL="http://localhost:5173"
+
+# === FILE UPLOAD ===
+# Варианты: local | cloudinary
+STORAGE_TYPE=local
+
+# === CLOUDINARY (БЕСПЛАТНО 25GB!) ===
+# Регистрация: https://cloudinary.com/users/register/free
+# После регистрации скопируйте данные из Dashboard:
+# STORAGE_TYPE=cloudinary
+# CLOUDINARY_CLOUD_NAME=your-cloud-name-here
+# CLOUDINARY_API_KEY=your-api-key-here
+# CLOUDINARY_API_SECRET=your-api-secret-here
